--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script> <!-- Ensure Chart.js is included -->
     <script src="https://cdn.jsdelivr.net/npm/chartjs-plugin-datalabels"></script>
+    <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@500;700&display=swap" rel="stylesheet">
     <style>
         table {
             width: 100%; /* Match table width to card width */
@@ -86,12 +87,84 @@
         .card:not([class*="bg-"]) {
             background: #fff;
         }
+        .futuristic-title {
+            display:flex;                /* pusatkan isi */
+            justify-content:center;
+            align-items:center;
+            gap:.8rem;
+            width:100%;
+            margin:0 auto;
+            font-family:'Orbitron', Arial, sans-serif;
+            font-size:clamp(2rem,3.6vw,3.4rem);
+            font-weight:700;
+            text-transform:uppercase;
+            letter-spacing:.08rem;       /* dikurangi agar lebih rapih */
+            background:linear-gradient(90deg,#9ffbff 0%,#65ffd9 25%,#ffe580 50%,#ffb3f5 75%,#ffffff 100%);
+            -webkit-background-clip:text;
+            background-clip:text; /* added for standard compatibility */
+            color:transparent;
+            position:relative;
+            padding:.2rem .4rem;
+            border-radius:0;
+            filter:none;
+            text-shadow:
+                0 0 2px rgba(244, 200, 200, 0.85),
+                0 0 4px rgba(241, 199, 199, 0.75),
+                0 2px 6px rgba(0,0,0,0.6),
+                0 0 10px rgba(125,249,255,.8),
+                0 0 18px rgba(84,255,228,.55),
+                0 0 28px rgba(255,157,240,.45);
+        }
+        .futuristic-title::before,
+        .futuristic-title::after {
+            content:none !important;
+            display:none !important;
+        }
+        .futuristic-title span {
+            display:inline-block;
+            animation:glowPulse 3.8s ease-in-out infinite;
+            text-shadow:
+                0 0 2px rgba(61, 26, 26, 0.85),
+                0 0 4px rgba(56, 26, 26, 0.7),
+                0 1px 5px rgba(0,0,0,0.55),
+                0 0 8px rgba(125,249,255,.85),
+                0 0 16px rgba(84,255,228,.6),
+                0 0 24px rgba(255,157,240,.5);
+        }
+        .futuristic-title .fx-accent { animation-delay:.5s; }
+        .futuristic-title .fx-highlight { animation-delay:1s; }
+        @keyframes glowPulse {
+            0%,100% {
+                opacity:1;
+                text-shadow:
+                    0 0 2px rgba(242, 107, 107, 0.9),
+                    0 0 4px rgba(234, 97, 97, 0.7),
+                    0 1px 6px rgba(0,0,0,0.55),
+                    0 0 10px rgba(125,249,255,.9),
+                    0 0 20px rgba(84,255,228,.7),
+                    0 0 32px rgba(255,157,240,.55);
+            }
+            50% {
+                opacity:.95;
+                text-shadow:
+                    0 0 2px rgba(0,0,0,0.85),
+                    0 0 3px rgba(0,0,0,0.65),
+                    0 1px 5px rgba(0,0,0,0.55),
+                    0 0 6px rgba(125,249,255,.65),
+                    0 0 14px rgba(84,255,228,.5),
+                    0 0 24px rgba(255,157,240,.42);
+            }
+        }
     </style>
 </head>
 <body>
     <!-- Container hanya untuk judul & tombol -->
     <div class="container mt-5">
-        <h1 class="text-center mb-4">Outstanding Tanjung Perak</h1>
+        <h1 class="text-center mb-4 futuristic-title">
+            <span class="fx-primary">Outstanding</span>
+            <span class="fx-accent">Tanjung</span>
+            <span class="fx-highlight">Perak</span>
+        </h1>
         <button id="downloadExcel" class="btn btn-success mb-3">Download Excel</button>
     </div>
 
@@ -341,6 +414,35 @@
             });
         }
 
+        // Plugin shadow untuk batang bar chart
+        const barShadowPlugin = {
+            id: "barShadow",
+            afterDatasetsDraw(chart, args, opts) {
+                const { ctx } = chart;
+                const {
+                    shadowColor = "rgba(0,0,0,0.28)",
+                    blur = 6,
+                    offsetY = 4,
+                    offsetX = 0
+                } = opts || {};
+                chart.data.datasets.forEach((ds, di) => {
+                    const meta = chart.getDatasetMeta(di);
+                    if (!meta.visible) return;
+                    meta.data.forEach(bar => {
+                        const props = bar.getProps(["x","y","base","width","height"], true);
+                        const x = props.x - props.width / 2;
+                        const y = Math.min(props.y, props.base);
+                        const h = Math.abs(props.base - props.y);
+                        ctx.save();
+                        ctx.fillStyle = shadowColor;
+                        ctx.filter = `blur(${blur}px)`;
+                        ctx.fillRect(x + offsetX, y + offsetY, props.width, h);
+                        ctx.restore();
+                    });
+                });
+            }
+        };
+
         let barChart, barChartSurabaya, barChartGresik;
 
         function buildChart(ctx, labelText) {
@@ -358,6 +460,12 @@
                             formatter: v => v,
                             color: "black",
                             font: { weight: "bold" }
+                        },
+                        // Konfigurasi plugin shadow
+                        barShadow: {
+                            shadowColor: "rgba(0,0,0,0.22)",
+                            blur: 8,
+                            offsetY: 5
                         }
                     },
                     scales: {
@@ -365,7 +473,7 @@
                         y: { beginAtZero: true, title: { display: true, text: "Value" } }
                     }
                 },
-                plugins: [ChartDataLabels]
+                plugins: [ChartDataLabels, barShadowPlugin]
             });
         }
 
@@ -383,8 +491,8 @@
         const MATERIAL_PALETTES = {
             overall: [
                 "#e53935","#d81b60","#8e24aa","#5e35b1","#3949ab",
-                "#1e88e5","#039be5","#00acc1","#00897b","#43a047",
-                "#7cb342","#fdd835","#fb8c00","#f4511e"
+                "#1e88e5","#1976d2","#1565c0","#0d47a1",
+                "#0288d1","#0277bd","#01579b"
             ],
             surabaya: [
                 "#1e88e5","#1976d2","#1565c0","#0d47a1",
