Initial commit atau update file
# Conflicts:
#	abai.csv
#	gabung.csv

--- a/index.html
+++ b/index.html
@@ -100,9 +100,10 @@
             text-transform:uppercase;
             letter-spacing:.08rem;       /* dikurangi agar lebih rapih */
             background:linear-gradient(90deg,#9ffbff 0%,#65ffd9 25%,#ffe580 50%,#ffb3f5 75%,#ffffff 100%);
-            -webkit-background-clip:text;
-            background-clip:text; /* added for standard compatibility */
+            background-clip: text;
+            -webkit-background-clip: text;
             color:transparent;
+            -webkit-text-fill-color: transparent;
             position:relative;
             padding:.2rem .4rem;
             border-radius:0;
