--- a/index.html
+++ b/index.html
@@ -40,12 +40,16 @@
         .chart-container {
             margin-top: 15px;
             margin-bottom: 25px;
-            background: #ffffff;
+            background: rgba(255,255,255,0.65);            /* was solid white */
+            backdrop-filter: blur(8px) saturate(110%);
+            -webkit-backdrop-filter: blur(8px) saturate(110%);
+            border: 1px solid rgba(255,255,255,0.45);
             padding: 10px 15px;
             border: 1px solid #ddd;
             border-radius: 6px;
             box-shadow: 0 10px 10px rgba(0,0,0,0.15); /* added */
             transition: box-shadow .25s ease, transform .25s ease; /* added */
+            overflow: hidden; /* pastikan apapun tidak keluar container */
         }
         .chart-container:hover { /* added */
             box-shadow: 0 6px 18px rgba(0,0,0,0.28);
@@ -61,16 +65,17 @@
             min-width: 120px;
         }
         .fixed-size {
-            width:1600px;      /* diubah dari width:100%; max-width:1200px; */
-            height:300px;      /* tetap 300 */
-            margin-left:auto;
-            margin-right:auto;
-            position:relative;
+            width: 100%;      /* ubah agar responsif dan tidak melebar keluar parent */
+            max-width: 1600px;
+            height: 300px;
+            margin-left: auto;
+            margin-right: auto;
+            position: relative;
         }
         .fixed-size canvas {
-            /* Hapus force width/height absolute supaya Chart.js hit detection akurat */
-            height:100%;
-            width:100%;
+            height: 100%;
+            width: 100%;
+            display: block; /* hilangkan whitespace bawaan inline-canvas */
         }
         /* Tambahan efek shadow pada card */
         .card {
@@ -85,7 +90,10 @@
         }
         /* (Opsional) Jika card punya background putih transparan, perjelas */
         .card:not([class*="bg-"]) {
-            background: #fff;
+            background: rgba(255,255,255,0.75);
+            backdrop-filter: blur(6px);
+            -webkit-backdrop-filter: blur(6px);
+            border: 1px solid rgba(255,255,255,0.5);
         }
         .futuristic-title {
             display:flex;                /* pusatkan isi */
@@ -156,6 +164,59 @@
                     0 0 24px rgba(255,157,240,.42);
             }
         }
+
+        /* Futuristic soft blue background */
+        html, body { height: 100%; }
+        body {
+            background-color: #eaf6ff;
+            background-image:
+                /* soft glows */
+                radial-gradient(1000px 800px at 20% 10%, rgba(173,216,230,.35) 0%, rgba(173,216,230,0) 60%),
+                radial-gradient(800px 600px at 80% 20%, rgba(125,249,255,.22) 0%, rgba(125,249,255,0) 55%),
+                radial-gradient(900px 700px at 30% 80%, rgba(84,255,228,.16) 0%, rgba(84,255,228,0) 55%),
+                /* base gradient */
+                linear-gradient(180deg, #f4fbff 0%, #e7f6ff 50%, #ecfaff 100%);
+            background-attachment: fixed, fixed, fixed, fixed;
+            background-size: auto, auto, auto, 100% 100%;
+            background-repeat: no-repeat;
+        }
+
+        /* Subtle animated sheen overlay */
+        body::after {
+            content: "";
+            position: fixed;
+            inset: 0;
+            pointer-events: none;
+            background: linear-gradient(120deg,
+                rgba(145,194,255,.18),
+                rgba(125,249,255,.12),
+                rgba(173,216,230,.18)
+            );
+            background-size: 300% 300%;
+            animation: gradientShift 18s ease-in-out infinite;
+            mix-blend-mode: screen;
+        }
+        @keyframes gradientShift {
+            0%   { background-position: 0% 50%; }
+            50%  { background-position: 100% 50%; }
+            100% { background-position: 0% 50%; }
+        }
+        @media (prefers-reduced-motion: reduce) {
+            body::after { animation: none; }
+        }
+
+        /* Optional: enable this image layer for added texture (Uncomment to use) */
+        /* body {
+            background-image:
+                radial-gradient(1000px 800px at 20% 10%, rgba(173,216,230,.35) 0%, rgba(173,216,230,0) 60%),
+                radial-gradient(800px 600px at 80% 20%, rgba(125,249,255,.22) 0%, rgba(125,249,255,0) 55%),
+                radial-gradient(900px 700px at 30% 80%, rgba(84,255,228,.16) 0%, rgba(84,255,228,0) 55%),
+                linear-gradient(180deg, #f4fbff 0%, #e7f6ff 50%, #ecfaff 100%),
+                url('https://images.unsplash.com/photo-1549880338-65ddcdfd017b?auto=format&fit=crop&w=1920&q=80');
+            background-size: auto, auto, auto, 100% 100%, cover;
+            background-position: center;
+            background-attachment: fixed, fixed, fixed, fixed, fixed;
+        } */
     </style>
 </head>
 <body>
@@ -449,15 +510,31 @@
         function buildChart(ctx, labelText) {
             return new Chart(ctx, {
                 type: "bar",
-                data: { labels: [], datasets: [{ label: labelText, data: [], backgroundColor: [], borderColor: [], borderWidth: 1 }] },
+                data: {
+                    labels: [],
+                    datasets: [{
+                        label: labelText,
+                        data: [],
+                        backgroundColor: [],
+                        borderColor: [],
+                        borderWidth: 1,
+                        clip: 0 // paksa semua gambar dataset tetap di dalam chartArea
+                    }]
+                },
                 options: {
                     responsive: true,
                     maintainAspectRatio: false, // Tambahan: agar ukuran mengikuti container tanpa distorsi koordinat
+                    layout: {
+                        padding: { top: 8, right: 8, bottom: 8, left: 8 } // beri jarak aman dari tepi
+                    },
                     plugins: {
-                        legend: { display: true, position: "top" },
+                        legend: { display: false }, // hide legends on all charts
                         datalabels: {
                             anchor: "end",
-                            align: "top",
+                            align: "end",          // posisi di ujung bar (lebih aman)
+                            offset: 2,
+                            clip: true,            // jangan gambar di luar chartArea
+                            clamp: true,           // paksa tetap di tepi bila mepet
                             formatter: v => v,
                             color: "black",
                             font: { weight: "bold" }
@@ -470,8 +547,15 @@
                         }
                     },
                     scales: {
-                        x: { title: { display: true, text: "Month" } },
-                        y: { beginAtZero: true, title: { display: true, text: "Value" } }
+                        x: {
+                            title: { display: false },
+                            grid: { display: false } // hide vertical gridlines
+                        },
+                        y: {
+                            beginAtZero: true,
+                            title: { display: false }, // Y-Axis title already hidden
+                            grid: { display: false }
+                        }
                     }
                 },
                 plugins: [ChartDataLabels, barShadowPlugin]
