--- a/index.html
+++ b/index.html
@@ -222,6 +222,39 @@
             text-align: center;
             vertical-align: middle;
         }
+
+        /* Gradient backgrounds for dashboard cards */
+        #cardsContainer .card.bg-danger {
+            background: linear-gradient(135deg, #ff6a88 0%, #ff3d3d 100%) !important;
+            border: 0;
+        }
+        #cardsContainer .card.bg-primary {
+            background: linear-gradient(135deg, #2b7cff 0%, #0047ff 100%) !important;
+            border: 0;
+        }
+        #cardsContainer .card.bg-success {
+            background: linear-gradient(135deg, #42e695 0%, #3bb2b8 100%) !important;
+            border: 0;
+        }
+        #cardsContainer .card.bg-warning {
+            background: linear-gradient(135deg, #f6d365 0%, #fda085 100%) !important;
+            border: 0;
+        }
+        #cardsContainer .card.bg-secondary {
+            background: linear-gradient(135deg, #a1a1aa 0%, #6b7280 100%) !important;
+            border: 0;
+        }
+
+        /* Subtle hover lift + brighten */
+        #cardsContainer .card[class*="bg-"]:hover {
+            filter: brightness(1.05);
+        }
+
+        /* Improve legibility on gradients */
+        #cardsContainer .card .card-title,
+        #cardsContainer .card .card-text {
+            text-shadow: 0 1px 2px rgba(0,0,0,.25);
+        }
     </style>
 </head>
 <body>
