Initial commit atau update file

--- a/index.html
+++ b/index.html
@@ -265,7 +265,10 @@
             <span class="fx-accent">Tanjung</span>
             <span class="fx-highlight">Perak</span>
         </h1>
-        <button id="downloadExcel" class="btn btn-success mb-3">Download Excel</button>
+        <div class="d-flex justify-content-center gap-2 mb-3">
+            <button id="downloadExcel" class="btn btn-success">Download Excel</button>
+            <a href="trafiksby.html" class="btn btn-primary" id="openTrafik">Trafik</a>
+        </div>
     </div>
 
     <!-- Active filter info -->
