--- a/trafiksby.html
+++ b/trafiksby.html
@@ -6,6 +6,7 @@
 	<title>Trafik SBY - Total Kunjungan</title>
 	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@500;700&display=swap" rel="stylesheet">
+	<link rel="stylesheet" href="assets/css/neo-buttons.css">
 	<style>
 		body { background:#f6fafc; }
 		.card { box-shadow:0 6px 12px rgba(0,0,0,.08); }
@@ -284,7 +285,10 @@
 
 			<!-- Button: Dashboard (left-aligned) -->
 		<div class="d-flex justify-content-start mb-3">
-			<a href="index.html" class="btn btn-secondary">Dashboard</a>
+			<a href="index.html" class="neo-btn neo-btn--teal">
+				<span class="neo-btn__label">Dashboard</span>
+				<span class="neo-btn__icon">⌂</span>
+			</a>
 		</div>
 
 		<!-- ganti 2 row menjadi 1 container -->
